created header and changed achievement block

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header class="header">
+    <div class="container header__line">
+      <a class="header__logo-link" href="#">
+        <img class="header__logo-img" src="./assets/src/images/icons/logo.png" alt="logo company" width="60" height="60">
+      </a>
+      <button class="header__btn-menu" type="button">
+        <span class="header__btn-img"></span>
+      </button>
+    </div>
+  </header>
   <main>
     <section class="first-screen">
       <div class="container first-screen__line">
-        <nav class="first-screen__nav">
-          <a class="first-screen__nav-logo-link" href="#">
-            <img class="first-screen__logo-img" src="./assets/src/images/icons/logo.png" alt="logo company" width="60" height="60">
-          </a>
-          <button class="first-screen__nav-btn-menu" type="button">
-            <span class="first-screen__nav-btn-img"></span>
-          </button>
-        </nav>
         <div class="first-screen__content">
           <h1 class="first-screen__content-title">
             реализуем крупнейшие проекты <span class="title-lower">на россии</span>
@@ -31,26 +33,21 @@
           </span>
         </div>
         <div class="first-screen__achievement">
-          <div class="first-screen__achievement-item">
             <span class="first-screen__achivement-item-amount">26</span>
             <span class="first-screen__achievement-item-year">лет</span>
             <span class="first-screen__achievement-item-trade">на рынке</span>
-          </div>
-          <div class="first-screen__achievement-item">
+
             <span class="first-screen__achivement-item-amount">26</span>
             <span class="first-screen__achievement-item-year">лет</span>
             <span class="first-screen__achievement-item-trade">на рынке</span>
-          </div>
-          <div class="first-screen__achievement-item">
+
             <span class="first-screen__achivement-item-amount">26</span>
             <span class="first-screen__achievement-item-year">лет</span>
             <span class="first-screen__achievement-item-trade">на рынке</span>
-          </div>
-          <div class="first-screen__achievement-item">
+
             <span class="first-screen__achivement-item-amount">26</span>
             <span class="first-screen__achievement-item-year">лет</span>
             <span class="first-screen__achievement-item-trade">на рынке</span>
-          </div>
         </div>
       </div>
     </section>
